bun/templates/comp-sentence.css
.sentence {
    /* set to 0 to avoid the spaces inserted
    between inline-block elements when two tags
    are printed in different lines by Knockout */
    word-spacing: -0.26em;
}

.literal {
    font-size: 1em;
}

.word, .sub-word, .literal {
    display: inline-block;
}

.word {
    transition-property: margin-left, margin-right;
    transition-duration: 0.2s;
    transition-timing-function: ease;
    -webkit-transition-property: margin-left, margin-right;
    -webkit-transition-duration: 0.2s;
    -webkit-transition-timing-function: ease;
    margin-left: 0;
    margin-right: 0;
}

.word:first-child {
    margin-left: 0;
}

.word:last-child {
    margin-right: 0;
}

.word.reading-aid {
    margin-left: 0.15em;
    margin-right: 0.15em;
}

.literal a {
    text-decoration: none;
    color: black;
}

.kanji a {
    text-decoration: none;
    cursor: pointer;
    color: #440000;
}

.furigana {
    transition-property: opacity;
    transition-duration: 0.2s;
    transition-timing-function: ease;
    font-size: 0.40em;
    margin-bottom: -0.12em;
    color: #AAA;
    text-align: center;
    opacity: 0;
}

.furigana.reading-aid {
    opacity: 1;
}

.furigana::-moz-selection { background: transparent; }

.translation {
    font-size: 1.6em;
}

.popover {
    max-width: 170px;
}

.popover-content {
    padding: 2px 10px 4px 10px; 
}

.popover-title {
    text-align: center;
    text-transform: uppercase;
    font-size: 0.8em;
    font-weight: bold;
    padding: 6px 0 4px 0;
}

.pron-title {
    color: gray;
    font-size: 0.95em;
    border-bottom: 1px #EEE solid;
    margin-bottom: 4px;
    margin-top: 6px;
}

.pro-option, .pro-separator {
    display: inline-block;
}

.pro-option {
    margin: 3px 5px 3px -4px;
    padding: 0px 4px;
    color: #555;
    line-height: 20px;
    font-size: 1.3em;
}

.pro-option:hover {
    text-decoration: underline;
}

.pro-option.selected {
    color: black;
    font-weight: bold;
}

.pro-separator {
    margin-left: -12px;
    margin-right: 6px;
}

.pro-separator:last-child {
    display: none;
}

